tests/rosetta/out/C/averages-mean-time-of-day.error
cc: exit status 1
/tmp/averages-mean-time-of-day.c: In function ‘meanTime’:
/tmp/averages-mean-time-of-day.c:164:17: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  164 |   return pad(h) + ":" + pad(m) + ":" + pad(s);
      |          ~~~~~~ ^
      |          |      |
      |          char * char *
/tmp/averages-mean-time-of-day.c: In function ‘mochi_main’:
/tmp/averages-mean-time-of-day.c:173:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  173 |   printf("%d\n", meanTime(inputs));
      |           ~^     ~~~~~~~~~~~~~~~~
      |            |     |
      |            int   char *
      |           %s
